// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. iconemail renders with different colours 1`] = `
<g
  fill="#facade"
  stroke="#c0ffee"
>
  <path />
</g>
`;

exports[`2. iconfacebook renders with different colours 1`] = `
<g
  fill="#facade"
  stroke="#c0ffee"
>
  <path />
</g>
`;

exports[`3. iconforwardarrow renders with different colours 1`] = `
<g
  fill="#facade"
>
  <path />
</g>
`;

exports[`4. iconstar renders with different colours 1`] = `
<path
  fill="#facade"
  stroke="#c0ffee"
/>
`;

exports[`5. iconcopylink renders with different colours 1`] = `
<path
  fill="#facade"
  stroke="#c0ffee"
/>
`;

exports[`6. iconsavebookmark renders with different colours 1`] = `
<path
  fill="#facade"
  stroke="#c0ffee"
/>
`;

exports[`7. icontwitter renders with different colours 1`] = `
<path
  fill="#facade"
  stroke="#c0ffee"
/>
`;

exports[`8. iconvideo renders with different colours 1`] = `
Array [
  <rect
    fill="#facade"
    stroke="#c0ffee"
  />,
  <polygon
    fill="#facade"
    stroke="#c0ffee"
  />,
]
`;

exports[`9. iconvideo360player renders with different colours 1`] = `
<path
  fill="#facade"
  stroke="#c0ffee"
/>
`;

exports[`10. thestlogo renders with different colours 1`] = `
<path
  fill="#facade"
  stroke="#c0ffee"
/>
`;

exports[`11. thetimeslogo renders with different colours 1`] = `
<path
  fill="#facade"
  stroke="#c0ffee"
/>
`;

exports[`12. closeicon renders with different colours 1`] = `
<path
  fill="white"
  stroke="white"
/>
`;

exports[`13. iconforwardchevron renders with different colours 1`] = `
<g
  fill="#facade"
>
  <path />
</g>
`;

exports[`14. iconactivityindicator renders with different colours 1`] = `
<activity-indicator__ActivityIndicatorContainer>
  <div>
    <activity-indicator__ActivityIndicatorSpinner>
      <div />
    </activity-indicator__ActivityIndicatorSpinner>
  </div>
</activity-indicator__ActivityIndicatorContainer>
`;
